# comp429Project

./: replay_commits.sh  setup_all.sh
backup/: BOOTSTRAP_README.md  CODE_PATCHES.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT.md  bootstrap.sh
examples/multigpu_benchmark/: CMakeLists.txt  build_and_run.sh
examples/multigpu_benchmark/include/: PerformanceMonitor.cuh
examples/multigpu_benchmark/src/: multigpu_bootstrap_bench.cu  multigpu_gpu_only_bench.cu  multigpu_matmul_bench.cu  multigpu_profiled_bench.cu  multigpu_simple_bench.cu  test_dual_context.cu
include/CKKS/: Context.cuh
project_report/: main.tex  proposal.tex
src/: ConstantsGPU.cu
src/CKKS/: Context.cu  Limb.cu  LimbPartition.cu
